<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="8dp"
        android:text="@string/information"
        app:layout_constraintBottom_toTopOf="@+id/displayName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="2dp"
        android:text="@string/displayName"
        app:layout_constraintBottom_toTopOf="@+id/displayEmail"
        app:layout_constraintEnd_toStartOf="@+id/editName"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/editName"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/edit"
        app:layout_constraintBottom_toTopOf="@+id/editEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/displayName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_edit" />

    <TextView
        android:id="@+id/displayMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="8dp"
        android:text="@string/displayMood"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editMood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayPhone" />

    <ImageButton
        android:id="@+id/editPhone"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/edit"
        app:layout_constraintBottom_toTopOf="@+id/editMood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/displayPhone"
        app:layout_constraintTop_toBottomOf="@+id/editAddress"
        app:srcCompat="@drawable/ic_action_edit" />

    <TextView
        android:id="@+id/displayPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="8dp"
        android:text="@string/displayPhone"
        app:layout_constraintBottom_toTopOf="@+id/displayMood"
        app:layout_constraintEnd_toStartOf="@+id/editPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayAddress" />

    <ImageButton
        android:id="@+id/editMood"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/displayMood"
        app:layout_constraintTop_toBottomOf="@+id/editPhone"
        app:srcCompat="@drawable/ic_action_edit" />

    <TextView
        android:id="@+id/displayAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="8dp"
        android:text="@string/displayAddress"
        app:layout_constraintBottom_toTopOf="@+id/displayPhone"
        app:layout_constraintEnd_toStartOf="@+id/editAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayEmail" />

    <ImageButton
        android:id="@+id/editAddress"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/edit"
        app:layout_constraintBottom_toTopOf="@+id/editPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/displayAddress"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        app:srcCompat="@drawable/ic_action_edit" />

    <TextView
        android:id="@+id/displayEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="8dp"
        android:text="@string/displayEmail"
        app:layout_constraintBottom_toTopOf="@+id/displayAddress"
        app:layout_constraintEnd_toStartOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayName" />

    <ImageButton
        android:id="@+id/editEmail"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/edit"
        app:layout_constraintBottom_toTopOf="@+id/editAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/displayEmail"
        app:layout_constraintTop_toBottomOf="@+id/editName"
        app:srcCompat="@drawable/ic_action_edit" />
</android.support.constraint.ConstraintLayout>